agragar cabio a la seccion de contacto

--- a/index.html
+++ b/index.html
@@ -212,12 +212,12 @@
          </section>
          <!-- #call-to-action -->
          <!---------------------------
-            sección Contactenos
+            sección Contáctame
             ------------------------------>
          <section id="contact" class="wow fadeInUp">
             <div class="container">
                <div class="section-header">
-                  <h2>Contáctame</h2>
+                  <h2>Contáctame </h2>
                   <p>Si desea ponerse en contacto conmigo puede enviar un mensaje a través de nuestro correo o
                      mi numero,  de antemano agradecemos por tomarse el tiempo de escribirnos estaremos charlando lo más
                      pronto posible con usted.
