--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="container">
                <div class="row">
                   <div class="col-lg-6 about-img">
-                     <img src="img/equipo.jpg" alt="">
+                     <img src="img/jj2-corta.png" alt="">
                   </div>
                   <div class="col-lg-6 content">
                      <h4>Jairvillalobos</h4>
