--- a/desarrollo-medida.html
+++ b/desarrollo-medida.html
@@ -86,7 +86,7 @@ https://templatemo.com/tm-538-digital-trend
       <div class="row">
         <div class="col-lg-9 mx-auto col-12" data-aos="fade-up">
           <div class="client-info mt-lg-5 py-lg-5">
-            <h2>Desarrollo soluciones web, móvil y aplicaciones de software a medida a través de proyectos tecnológicos
+            <h2>Desarrollo soluciones web, móvil y aplicaciones de software a medida a través de servicios tecnológicos
               personalizados y adaptados a cada empresa o idea de negocio con impacto innovador.</h2>
           </div>
         </div>
