--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                    <a href="#about" class="nav-link smoothScroll">Sobre mí</a>
                               </li>
                               <li class="nav-item">
-                                   <a href="#servicio" class="nav-link smoothScroll">Proyectos </a>
+                                   <a href="#servicio" class="nav-link smoothScroll">servicios </a>
                               </li>
                               <li class="nav-item">
                                    <a href="contact.html" class="nav-link contact">Contacto</a>
