update page cotanto

--- a/contacto.html
+++ b/contacto.html
@@ -3,14 +3,8 @@
 
 <head>
 
-  <title>Digital Trend Contact</title>
-  <!--
+  <title>contacto</title>
 
-DIGITAL TREND
-
-https://templatemo.com/tm-538-digital-trend
-
--->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="description" content="">
@@ -51,7 +45,7 @@ https://templatemo.com/tm-538-digital-trend
               <a href="index.html" class="nav-link smoothScroll">Sobre mí</a>
             </li>
             <li class="nav-item">
-              <a href="contact.html" class="nav-link contact">Contacto</a>
+              <a href="contacto.html" class="nav-link contacto">contacto</a>
             </li>
           </ul>
         </div>
@@ -59,27 +53,27 @@ https://templatemo.com/tm-538-digital-trend
     </nav>
   </header>
 
-  <!-- CONTACT -->
-  <section id="contact" class="wow fadeInUp">
+  <!-- contacto -->
+  <section id="contacto" class="wow fadeInUp">
     <div class="container">
 
-      <div class="row contact-info mt-n1">
+      <div class="row contacto-info mt-n1">
         <div class="col-md-4">
-          <div class="contact-address">
+          <div class="contacto-address">
             <i class="fa fa-location-arrow fa-lg" aria-hidden="true"></i>
             <h3>Dirección</h3>
             <address>Cl. 35 #48a 3-2 a 48a 3-93, Provincia de Cartagena, Bolívar</address>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="contact-phone">
+          <div class="contacto-phone">
             <i class="fa fa-mobile fa-lg" aria-hidden="true"></i>
             <h3>Numero Telefónico</h3>
             <p><a href="tel:+57 3013144203">+57 3013144203</a></p>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="contact-email">
+          <div class="contacto-email">
             <i class="fa fa-comments fa-lg" aria-hidden="true"></i>
             <h3>Correo</h3>
             <p><a href="mailto:juanjair2018@hotmail.com" target="_blanck">juanjair2018@hotmail.com</a></p>
