--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
      <title>Jairvillalobos</title>
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-     <meta name="description" content="siste web personal">
+     <meta name="description" content="Personal Website of Software Tester and Programmer Jairvillalobos">
      <meta name="author" content="Jairvillalobos">
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
      <link rel="stylesheet" href="css/bootstrap.min.css">
      <link rel="stylesheet" href="css/font-awesome.min.css">
      <link rel="stylesheet" href="css/aos.css">
@@ -47,7 +46,7 @@
                                    <a href="#servicio" class="nav-link smoothScroll">Servicios </a>
                               </li>
                               <li class="nav-item">
-                                   <a href="contact.html" class="nav-link contact">Contacto</a>
+                                   <a href="contacto.html" class="nav-link contacto">contacto</a>
                               </li>
                          </ul>
                     </div>
@@ -66,7 +65,7 @@
                          <div class="hero-text">
 
                               <h1 class="text-white" data-aos="fade-up">Mi nombre es Jair villalobos
-                                   soy Probador de software y programador.
+                                   soy Software Tester and Programmer.
                               </h1>
 
                               <a href="/cv/cv-jairvillalobos.pdf" class="custom-btn btn-bg btn mt-3" download
@@ -94,8 +93,7 @@
                     <div class="col-lg-7 mx-auto col-md-10 col-12">
                          <div class="about-info">
 
-                              <h2 class="mb-4" data-aos="fade-up"><strong>Jair villalobos</strong> Probador de software
-                                   y programador</h2>
+                              <h2 class="mb-4" data-aos="fade-up"><strong>Jair villalobos</strong> Software Tester and Programmer</h2>
 
                               <h5 class="mb-0" data-aos="fade-up">Soy un desarrollador de software profesional
                                    con experiencia en <strong>pruebas de software</strong>, estoy familiarizado con la
