--- a/desarrollo-medida.html
+++ b/desarrollo-medida.html
@@ -53,7 +53,7 @@ https://templatemo.com/tm-538-digital-trend
             </li>
 
             <li class="nav-item">
-              <a href="contact.html" class="nav-link contact">Contacto</a>
+              <a href="contacto.html" class="nav-link contacto">contacto</a>
             </li>
           </ul>
         </div>
