--- a/prueba-software.html
+++ b/prueba-software.html
@@ -47,7 +47,7 @@
             </li>
 
             <li class="nav-item">
-              <a href="contact.html" class="nav-link contact">Contacto</a>
+              <a href="contacto.html" class="nav-link contacto">contacto</a>
             </li>
           </ul>
         </div>
