update page contacto

--- a/contacto.html
+++ b/contacto.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 
-  <title>contacto</title>
+  <title>Contacto</title>
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -45,7 +45,7 @@
               <a href="index.html" class="nav-link smoothScroll">Sobre mí</a>
             </li>
             <li class="nav-item">
-              <a href="contacto.html" class="nav-link contacto">contacto</a>
+              <a href="contacto.html" class="nav-link contact">contacto</a>
             </li>
           </ul>
         </div>
@@ -53,27 +53,27 @@
     </nav>
   </header>
 
-  <!-- contacto -->
-  <section id="contacto" class="wow fadeInUp">
+  <!-- contact -->
+  <section id="contact" class="wow fadeInUp">
     <div class="container">
 
-      <div class="row contacto-info mt-n1">
+      <div class="row contact-info mt-n1">
         <div class="col-md-4">
-          <div class="contacto-address">
+          <div class="contact-address">
             <i class="fa fa-location-arrow fa-lg" aria-hidden="true"></i>
             <h3>Dirección</h3>
             <address>Cl. 35 #48a 3-2 a 48a 3-93, Provincia de Cartagena, Bolívar</address>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="contacto-phone">
+          <div class="contact-phone">
             <i class="fa fa-mobile fa-lg" aria-hidden="true"></i>
             <h3>Numero Telefónico</h3>
             <p><a href="tel:+57 3013144203">+57 3013144203</a></p>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="contacto-email">
+          <div class="contact-email">
             <i class="fa fa-comments fa-lg" aria-hidden="true"></i>
             <h3>Correo</h3>
             <p><a href="mailto:juanjair2018@hotmail.com" target="_blanck">juanjair2018@hotmail.com</a></p>
@@ -88,7 +88,7 @@
       <div class="row">
         <div class="col-lg-5 mx-lg-auto col-md-8 col-10">
           <h4>Contáctame</h4>
-          <h5 class="text-white" data-aos="fade-up" data-aos-delay="100">Si desea ponerse en contacto conmigo puede
+          <h5 class="text-white" data-aos="fade-up" data-aos-delay="100">Si desea ponerse en contact conmigo puede
             enviar un mensaje a través de nuestro correo o
             mi numero, de antemano agradecemos por tomarse el tiempo de escribirnos estaremos charlando lo más
             pronto posible con usted.</h5>
