--- a/desarrollo-medida.html
+++ b/desarrollo-medida.html
@@ -4,13 +4,7 @@
 <head>
 
   <title>Jairvillalobos</title>
-  <!--
 
-DIGITAL TREND
-
-https://templatemo.com/tm-538-digital-trend
-
--->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="description" content="">
@@ -53,7 +47,7 @@ https://templatemo.com/tm-538-digital-trend
             </li>
 
             <li class="nav-item">
-              <a href="contacto.html" class="nav-link contacto">contacto</a>
+              <a href="contact.html" class="nav-link contact">contact</a>
             </li>
           </ul>
         </div>
@@ -108,7 +102,7 @@ https://templatemo.com/tm-538-digital-trend
         </div>
 
         <div class="col-lg-3 col-md-6 col-12" data-aos="fade-up" data-aos-delay="200">
-          <h4 class="my-4">Información de contacto</h4>
+          <h4 class="my-4">Información de contact</h4>
 
           <p class="mb-1">
             <i class="fa fa-comments mr-2 footer-icon fa-lg" aria-hidden="true"></i>
