--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                    <a href="#servicio" class="nav-link smoothScroll">Servicios </a>
                               </li>
                               <li class="nav-item">
-                                   <a href="contacto.html" class="nav-link contacto">contacto</a>
+                                   <a href="contacto.html" class="nav-link contact">contacto</a>
                               </li>
                          </ul>
                     </div>
