remove section services

--- a/index.html
+++ b/index.html
@@ -42,12 +42,6 @@
                               <li class="nav-item">
                                    <a href="#about" class="nav-link smoothScroll">Sobre mí</a>
                               </li>
-                              <li class="nav-item">
-                                   <a href="#servicio" class="nav-link smoothScroll">Servicios </a>
-                              </li>
-                              <li class="nav-item">
-                                   <a href="contacto.html" class="nav-link contact">contacto</a>
-                              </li>
                          </ul>
                     </div>
                </div>
@@ -105,89 +99,7 @@
                          </div>
 
                          <div class="about-image" data-aos="fade-up" data-aos-delay="200">
-                              <img src="./images/intro-carousel/cod.png" class="img-fluid" alt="dev">
-                         </div>
-                    </div>
-
-               </div>
-          </div>
-     </section>
-
-     <!-- servicio -->
-     <section class="servicio section-padding" id="servicio">
-          <div class="container-fluid">
-               <div class="row">
-
-                    <div class="col-lg-12 col-12">
-
-                         <h2 class="mb-5 text-center" data-aos="fade-up">
-                              SERV<strong>ICIOS</strong>
-                         </h2>
-
-                         <div class="owl-carousel owl-theme" id="servicio-slide">
-
-
-                              <div class="item servicio-wrapper" data-aos="fade-up">
-                                   <img src="images/intro-carousel/desing-web.jpg" class="img-fluid"
-                                        alt="servicio image">
-
-                                   <div class="servicio-info">
-                                        <small>Pruebas de Software</small>
-
-                                        <h3>
-                                             <a href="prueba-software.html">
-                                                  <span>Pruebas de Software</span>
-                                                  <i class="fa fa-angle-right servicio-icon"></i>
-                                             </a>
-                                        </h3>
-                                   </div>
-                              </div>
-
-                              <div class="item servicio-wrapper" data-aos="fade-up">
-                                   <img src="images/intro-carousel/disen-compo.png" class="img-fluid"
-                                        alt="servicio image">
-
-                                   <div class="servicio-info">
-                                        <small>Mantenimiento</small>
-
-                                        <h3>
-                                             <a href="mantenimiento.html">
-                                                  <span>Mantenimiento</span>
-                                                  <i class="fa fa-angle-right servicio-icon"></i>
-                                             </a>
-                                        </h3>
-                                   </div>
-                              </div>
-
-                              <div class="item servicio-wrapper" data-aos="fade-up">
-                                   <img src="images/intro-carousel/config.png" class="img-fluid" alt="servicio image">
-
-                                   <div class="servicio-info">
-                                        <small>Desarrollo a medida</small>
-
-                                        <h3>
-                                             <a href="desarrollo-medida.html">
-                                                  <span>Desarrollo a medida</span>
-                                                  <i class="fa fa-angle-right servicio-icon"></i>
-                                             </a>
-                                        </h3>
-                                   </div>
-                              </div>
-
-                              <div class="item servicio-wrapper" data-aos="fade-up">
-                                   <img src="images/intro-carousel/code.png" class="img-fluid" alt="servicio image">
-
-                                   <div class="servicio-info">
-                                        <small>Desarrollo e Implementación</small>
-
-                                        <h3>
-                                             <a href="desarrollo-implementacion.html">
-                                                  <span>Desarrollo e Implementación</span>
-                                                  <i class="fa fa-angle-right servicio-icon"></i>
-                                             </a>
-                                        </h3>
-                                   </div>
-                              </div>
+                              <img src="./images/desing-web.jpg" class="img-fluid" alt="dev">
                          </div>
                     </div>
 
