add padin image

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
      </section>
 
      <!-- sobre mí -->
-     <section class="about section-padding pb-0" id="about">
+     <section class="about section-padding" id="about">
           <div class="container">
                <div class="row">
 
