--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
                     <div class="col-lg-7 mx-auto col-md-10 col-12">
                          <div class="about-info">
 
-                              <h2 class="mb-4" data-aos="fade-up"><strong>Jair villalobos</strong> Software Tester and Programmer</h2>
+                              <h2 class="mb-4" data-aos="fade-up"><strong>Jair villalobos</strong> Software Tester and
+                                   Programmer</h2>
 
                               <h5 class="mb-0" data-aos="fade-up">Soy un desarrollador de software profesional
                                    con experiencia en <strong>pruebas de software</strong>, estoy familiarizado con la
@@ -154,8 +155,6 @@
      <script src="js/custom.js"></script>
      <script src="js/bootstrap.min.js"></script>
      <script src="js/aos.js"></script>
-     <script src="js/owl.carousel.min.js"></script>
-     <script src="js/smoothscroll.js"></script>
 
 </body>
 
