--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                          <ul class="navbar-nav ml-auto">
                               <li class="nav-item">
-                                   <a href="#about" class="nav-link smoothScroll">Sobre mí</a>
+                                   <a href="#about" class="nav-link nav-link contact">Sobre mí</a>
                               </li>
                          </ul>
                     </div>
