update button style

--- a/index.html
+++ b/index.html
@@ -91,11 +91,8 @@
                                    Programmer</h2>
 
                               <h5 class="mb-0" data-aos="fade-up">Soy un desarrollador de software profesional
-                                   con experiencia en <strong>pruebas de software</strong>, estoy familiarizado con la
-                                   implementación de arquitecturas
-                                   limpias, tengo dominio de las técnicas de
-                                   <strong>POO</strong>, el diseño de <strong>APIs</strong> y el diseño de
-                                   <strong>bases de datos.</strong>
+                                   con experiencia en <strong>pruebas de software</strong>, estoy familiarizado con 
+                                   el desarrollo de software en entornos Web bajo lenguajes de Programación Python y JavaScript.
                               </h5>
                          </div>
 
