--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <nav class="navbar navbar-expand-lg">
                <div class="container">
                     <a class="navbar-brand" href="index.html">
-                         Jairvillalobos
+                         <img src="./images/logo_edited.png" alt="Jairvillalobos">
                     </a>
 
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -94,10 +94,6 @@
                                    con experiencia en <strong>pruebas de software</strong>, estoy familiarizado con 
                                    el desarrollo de software en entornos Web bajo lenguajes de Programación Python y JavaScript.
                               </h5>
-                         </div>
-
-                         <div class="about-image" data-aos="fade-up" data-aos-delay="200">
-                              <img src="./images/desing-web.jpg" class="img-fluid" alt="dev">
                          </div>
                     </div>
 
