--- a/index.html
+++ b/index.html
@@ -62,9 +62,8 @@
                                    soy Software Tester and Programmer.
                               </h1>
 
-                              <a href="/cv/cv-jairvillalobos.pdf" class="custom-btn btn-bg btn mt-3" download
+                              <a href="/cv/jairvillalobos-cv.pdf" class="custom-btn btn-bg btn mt-3" download
                                    data-aos="fade-up" data-aos-delay="100">Click para Descargar CV</a>
-
                          </div>
                     </div>
 
