cambio de identidad empresarial

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
 
-     <title>Jairvillalobos</title>
+     <title>Jvillsoft</title>
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-     <meta name="description" content="Personal Website of Software Tester and Programmer Jairvillalobos">
-     <meta name="author" content="Jairvillalobos">
+     <meta name="description" content="Somos Jvillsoft empresa de desarrollo y pruebas de software.">
+     <meta name="author" content="Jvillsoft">
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
      <link rel="stylesheet" href="css/bootstrap.min.css">
      <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -18,6 +18,7 @@
      <!-- CSS -->
      <link rel="stylesheet" href="css/style.css">
 
+     
 </head>
 
 <body>
@@ -28,8 +29,8 @@
      <header id="header">
           <nav class="navbar navbar-expand-lg">
                <div class="container">
-                    <a class="navbar-brand" href="index.html">
-                         <img src="./images/logo_edited.png" alt="Jairvillalobos">
+                    <a class="containerimg container" href="index.html">
+                         <img src="./images/logo.png" alt="Jvillsoft">
                     </a>
 
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -37,13 +38,13 @@
                          <span class="navbar-toggler-icon"></span>
                     </button>
 
-                    <div class="collapse navbar-collapse" id="navbarNav">
+                   <!--<div class="collapse navbar-collapse" id="navbarNav">
                          <ul class="navbar-nav ml-auto">
                               <li class="nav-item">
                                    <a href="#about" class="nav-link nav-link contact">Sobre mí</a>
                               </li>
                          </ul>
-                    </div>
+                    </div> -->
                </div>
           </nav>
      </header>
@@ -58,19 +59,15 @@
                     <div class="col-lg-6 col-md-10 col-12 d-flex flex-column justify-content-center align-items-center">
                          <div class="hero-text">
 
-                              <h1 class="text-white" data-aos="fade-up">Mi nombre es Jair villalobos
-                                   soy Software Tester and Programmer.
+                              <h1 class="text-white" data-aos="fade-up">Somos Jvillsoft empresa de 
+                                   desarrollo y pruebas de software.
                               </h1>
-
-                              <a href="/cv/jairvillalobos-cv.pdf" class="custom-btn btn-bg btn mt-3" download
-                                   data-aos="fade-up" data-aos-delay="100">Click para Descargar CV</a>
                          </div>
                     </div>
 
                     <div class="col-lg-6 col-12">
                          <div class="hero-image" data-aos="fade-up" data-aos-delay="300">
-
-                              <img src="images/jj2-corta.png" class="img-fluid rounded-circle" alt="working girl">
+                              <img src="images/Jvillsoft-logo.png" class="img-fluid " alt="working girl">
                          </div>
                     </div>
 
@@ -86,12 +83,11 @@
                     <div class="col-lg-7 mx-auto col-md-10 col-12">
                          <div class="about-info">
 
-                              <h2 class="mb-4" data-aos="fade-up"><strong>Jair villalobos</strong> Software Tester and
-                                   Programmer</h2>
+                              <h2 class="mb-4" data-aos="fade-up"><strong>Jvillsoft </strong>desarrollo y pruebas de software.</h2>
 
-                              <h5 class="mb-0" data-aos="fade-up">Soy un desarrollador de software profesional
-                                   con experiencia en <strong>pruebas de software</strong>, estoy familiarizado con 
-                                   el desarrollo de software en entornos Web bajo lenguajes de Programación Python y JavaScript.
+                              <h5 class="mb-0" data-aos="fade-up">Contamos con un grupo interdisiplinario de profecionales 
+                                   con amplia expriencia en desarrollo de software y <strong> pruebas </strong>,
+                                   trabajamos en entornos de escritorio y aplicaicones Web bajo lenguajes de Programación Python, JavaScript, Java, SQL, PHP.
                               </h5>
                          </div>
                     </div>
