--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                               <h2 class="mb-4" data-aos="fade-up"><strong>Jvillsoft </strong>desarrollo y pruebas de software.</h2>
 
                               <h5 class="mb-0" data-aos="fade-up">Contamos con un grupo interdisiplinario de profecionales 
-                                   con amplia expriencia en desarrollo de software y <strong> pruebas </strong>,
-                                   trabajamos en entornos de escritorio y aplicaicones Web bajo lenguajes de Programación Python, JavaScript, Java, SQL, PHP.
+                                   con amplia experiencia en desarrollo de software y <strong> pruebas </strong>,
+                                   trabajamos en entornos de escritorio y aplicaciones Web bajo lenguajes de Programación Python, JavaScript, Java, SQL, PHP.
                               </h5>
                          </div>
                     </div>
