update color nav

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="col-lg-6 col-md-10 col-12 d-flex flex-column justify-content-center align-items-center">
                          <div class="hero-text">
 
-                              <h1 class="text-white" data-aos="fade-up">Somos Jvillsoft empresa de 
+                              <h1 class="text-white" data-aos="fade-up">Bienvenidos a Jvillsoft empresa de 
                                    desarrollo y pruebas de software.
                               </h1>
                          </div>
@@ -67,7 +67,7 @@
 
                     <div class="col-lg-6 col-12">
                          <div class="hero-image" data-aos="fade-up" data-aos-delay="300">
-                              <img src="images/Jvillsoft-logo.png" class="img-fluid " alt="working girl">
+                              <img src="images/logo.png" class="img-fluid " alt="working girl">
                          </div>
                     </div>
 
@@ -86,8 +86,12 @@
                               <h2 class="mb-4" data-aos="fade-up"><strong>Jvillsoft </strong>desarrollo y pruebas de software.</h2>
 
                               <h5 class="mb-0" data-aos="fade-up">Contamos con un grupo interdisiplinario de profecionales 
-                                   con amplia experiencia en desarrollo de software y <strong> pruebas </strong>,
-                                   trabajamos en entornos de escritorio y aplicaciones Web bajo lenguajes de Programación Python, JavaScript, Java, SQL, PHP.
+                                   con amplia experiencia en desarrollo de software y pruebas,
+                                   trabajamos en entornos de escritorio y aplicaciones Web bajo lenguajes de Programación <strong>Python</strong>,
+                                   <strong>JavaScript</strong>,
+                                   <strong>Java</strong>,
+                                   <strong>SQL</strong>,
+                                   <strong>PHP</strong>.
                               </h5>
                          </div>
                     </div>
