add social icons en footer section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
 									<li><a href="https://www.linkedin.com/in/jair-villalobos-b06ba621b/"
 											target="_blank"><i class="icon-linkedin2"></i></a></li>
 									<li><a href="https://github.com/jairvillalobos" target="_blank"><i
-												class="icon-github"></i></a></li>
+												class="icon-github2"></i></a></li>
+												
+									<li><a href="https://github.com/jairvillalobos" target="_blank"><i
+												class="icon-whatsapp"></i></a></li>
 								</ul>
 								</p>
 							</div>
@@ -72,14 +75,6 @@
 								Windows
 								y ambientes Web bajo lenguajes de programación, Java, JavaScript, CSS, SQL, Python,
 								HTML.</p>
-							<ul class="fh5co-social-icons">
-								<li><a href="https://www.linkedin.com/in/jair-villalobos-b06ba621b/" target="_blank"><i
-											class="icon-linkedin2"></i></a></li>
-								<li><a href="https://github.com/jairvillalobos" target="_blank"><i
-											class="icon-github"></i></a></li>
-								<li><a href="https://api.whatsapp.com/send?phone=573013144203" target="_blank"><i
-											class="icon-whatsapp"></i></a></li>
-							</ul>
 							</p>
 						</div>
 					</div>
@@ -311,7 +306,12 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p> © Jairvillalobos 2022</p>
+					<ul class="fh5co-social-icons">
+						<li><a href="https://www.linkedin.com/in/jair-villalobos-b06ba621b/" target="_blank"><i
+									class="icon-linkedin2"></i></a></li>
+						<li><a href="https://github.com/jairvillalobos" target="_blank"><i
+									class="icon-github2"></i></a></li>
+					</ul>
 				</div>
 			</div>
 		</div>
