update tamño de subtitulo principal

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 								<div class="profile-thumb" style="background: url(images/jv.jpg);"></div>
 								<h1><span>Jair Villalobos</span></h1>
-								<h3><span>Programador y probador de software</span></h3>
+								<h2><span><strong>Programador y  probador de software</strong></span></h2>
 								<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="https://www.linkedin.com/in/jair-villalobos-b06ba621b/"
@@ -70,12 +70,12 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-9 col-md-offset-2">
-							<p>Soy un joven emprendedor apasionado por la programación y las pruebas de software. Tengo
-								experiencia en el desarrollo e implementación de aplicaciones de software para ambientes
-								Windows
-								y ambientes Web bajo lenguajes de programación, Java, JavaScript, CSS, SQL, Python,
-								HTML.</p>
-							</p>
+								<p>Soy un joven emprendedor apasionado por la programación y las pruebas de software. Tengo
+									experiencia en el desarrollo e implementación de aplicaciones de software para ambientes
+									Windows
+									y ambientes Web bajo lenguajes de programación,<strong>Java</strong>,<strong>JavaScript</strong>,
+									<strong>CSS</strong>,<strong>SQL</strong>,<strong>Python</strong>,<strong>HTML.</strong>
+								</p>
 						</div>
 					</div>
 				</div>
