host-fix url whatsapp

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 									<li><a href="https://github.com/jairvillalobos" target="_blank"><i
 												class="icon-github2"></i></a></li>
 												
-									<li><a href="https://github.com/jairvillalobos" target="_blank"><i
+									<li><a href="https://api.whatsapp.com/send?phone=573013144203" target="_blank"><i
 												class="icon-whatsapp"></i></a></li>
 								</ul>
 								</p>
