--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Jairvillalobos</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Sitio web oficial de Jair villalobos Programador y probador de software" />
-	<meta name="author" content="Jairvillalobos" />
+	<meta name="description"
+		content="Sitio web oficial de Jair villalobos Full Stack Developer Spring Boot | Angular" />
+	<meta name="author" content="Jair villalobos" />
 
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
@@ -41,14 +42,15 @@
 							<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 								<div class="profile-thumb" style="background: url(images/jv.jpg);"></div>
 								<h1><span>Jair Villalobos</span></h1>
-								<h2><span><strong>Programador y  probador de software</strong></span></h2>
+								<h2><span><strong>Desarrollador de pila completa con Spring boot y
+											Angular</strong></span></h2>
 								<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="https://www.linkedin.com/in/jair-villalobos-b06ba621b/"
 											target="_blank"><i class="icon-linkedin2"></i></a></li>
 									<li><a href="https://github.com/jairvillalobos" target="_blank"><i
 												class="icon-github2"></i></a></li>
-												
+
 									<li><a href="https://api.whatsapp.com/send?phone=573013144203" target="_blank"><i
 												class="icon-whatsapp"></i></a></li>
 								</ul>
@@ -70,12 +72,15 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-9 col-md-offset-2">
-								<p>Soy un joven emprendedor apasionado por la programación y las pruebas de software. Tengo
-									experiencia en el desarrollo e implementación de aplicaciones de software para ambientes
-									Windows
-									y ambientes Web bajo lenguajes de programación,<strong>Java</strong>,<strong>JavaScript</strong>,
-									<strong>CSS</strong>,<strong>SQL</strong>,<strong>Python</strong>,<strong>HTML.</strong>
-								</p>
+							<p>Soy un joven emprendedor apasionado por la programación y las pruebas de software. Tengo
+								experiencia en el desarrollo e implementación de aplicaciones de software para ambientes
+								Windows
+								y ambientes Web bajo lenguajes de
+								programación,<strong>Java</strong>,<strong>JavaScript</strong>,
+								<strong>CSS</strong>,<strong>SQL</strong>,<strong>Python</strong>,<strong>HTML.</strong>
+								Actualmente soy desarrollador full stack con <strong>Spring Boot</strong> y
+								<strong>Angular.</strong>
+							</p>
 						</div>
 					</div>
 				</div>
@@ -84,12 +89,6 @@
 
 		<div id="fh5co-resume" class="fh5co-bg-color">
 			<div class="container">
-				<div class="row animate-box">
-					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-						<h2>Mi resumen
-						</h2>
-					</div>
-				</div>
 				<div class="row">
 					<div class="col-md-12 col-md-offset-0">
 						<ul class="timeline">
@@ -123,8 +122,9 @@
 									</div>
 									<div class="timeline-body">
 										<p>Ofresco mis servicios como desarrollador de sistemas informaticos
-											bajo técnlogias web y diferentes lenguajes de programación,
-											con un fuerte compromiso para llevar acabo todas mistareas.</p>
+											bajo técnlogias web con Spring Boot y Angular, con un fuerte compromiso para
+											llevar acabo
+											todas mistareas.</p>
 									</div>
 								</div>
 							</li>
@@ -206,7 +206,7 @@
 						<div class="col-md-4 text-center">
 							<div class="feature-left">
 								<span class="icon">
-									<i class="icon-paintbrush"></i>
+									<i class="icon-code"></i>
 								</span>
 								<div class="feature-copy">
 									<h3>Desarrollo de software</h3>
@@ -219,7 +219,7 @@
 						<div class="col-md-4 text-center">
 							<div class="feature-left">
 								<span class="icon">
-									<i class="icon-briefcase"></i>
+									<i class="icon-html-five"></i>
 								</span>
 								<div class="feature-copy">
 									<h3>Desarrollo web </h3>
@@ -309,8 +309,8 @@
 					<ul class="fh5co-social-icons">
 						<li><a href="https://www.linkedin.com/in/jair-villalobos-b06ba621b/" target="_blank"><i
 									class="icon-linkedin2"></i></a></li>
-						<li><a href="https://github.com/jairvillalobos" target="_blank"><i
-									class="icon-github2"></i></a></li>
+						<li><a href="https://github.com/jairvillalobos" target="_blank"><i class="icon-github2"></i></a>
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -337,4 +337,5 @@
 	<!-- Main -->
 	<script src="js/main.js"></script>
 </body>
+
 </html>
