update section Education

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Jairvillalobos</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description"
-		content="Sitio web oficial de Jair villalobos Full Stack Developer Spring Boot | Angular" />
+		content="Jair villalobos Full Stack Developer" />
 	<meta name="author" content="Jair villalobos" />
 
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
@@ -42,8 +42,7 @@
 							<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 								<div class="profile-thumb" style="background: url(images/jv.jpg);"></div>
 								<h1><span>Jair Villalobos</span></h1>
-								<h2><span><strong>Desarrollador de pila completa con Spring boot y
-											Angular</strong></span></h2>
+								<h2><span><strong>Full Stack Developer</strong></span></h2>
 								<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="https://www.linkedin.com/in/jair-villalobos-b06ba621b/"
@@ -78,8 +77,8 @@
 								y ambientes Web bajo lenguajes de
 								programación,<strong>Java</strong>,<strong>JavaScript</strong>,
 								<strong>CSS</strong>,<strong>SQL</strong>,<strong>Python</strong>,<strong>HTML.</strong>
-								Actualmente soy desarrollador full stack con <strong>Spring Boot</strong> y
-								<strong>Angular.</strong>
+								Capaz de autogestión, eficaz en proyectos independientes  y 
+								Buenas habilidades de colaboración dentro de un equipo productivo.
 							</p>
 						</div>
 					</div>
@@ -117,13 +116,12 @@
 								<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 								<div class="timeline-panel">
 									<div class="timeline-heading">
-										<h3 class="timeline-title">Programador de software independiente</h3>
+										<h3 class="timeline-title">Desarrollador de pila completa</h3>
 										<span class="company">Abril 2018 - Actualidad</span>
 									</div>
 									<div class="timeline-body">
 										<p>Ofresco mis servicios como desarrollador de sistemas informaticos
-											bajo técnlogias web con Spring Boot y Angular, con un fuerte compromiso para
-											llevar acabo
+											bajo técnlogias web, con un fuerte compromiso para llevar acabo
 											todas mistareas.</p>
 									</div>
 								</div>
@@ -187,6 +185,20 @@
 									</div>
 								</div>
 							</li>
+
+							<li class="timeline-inverted animate-box">
+								<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
+								<div class="timeline-panel">
+									<div class="timeline-heading">
+										<h3 class="timeline-title">Procesos De Soporte Tecnico Para El Mantenimiento De Equipos De Computo	</h3>
+										<span class="company">Servicio Nacional de Aprendizaje - 2022</span>
+									</div>
+									<div class="timeline-body">
+										<p>Mantener equipos de cómputo según procedimiento técnico.</p>
+									</div>
+								</div>
+							</li>
+
 						</ul>
 					</div>
 				</div>
