update setions about

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 								Windows
 								y ambientes Web bajo lenguajes de
 								programación,<strong>Java</strong>,<strong>JavaScript</strong>,
-								<strong>CSS</strong>,<strong>SQL</strong>,<strong>Python</strong>,<strong>HTML.</strong>
+								<strong>SQL</strong>,<strong>Python</strong>  y <strong>Tecnoclogías Web (HTML5,CSS3). </strong>
 								Capaz de autogestión, eficaz en proyectos independientes  y 
 								Buenas habilidades de colaboración dentro de un equipo productivo.
 							</p>
